--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   google_fonts: ^6.3.1
   gap: ^3.0.1
   easy_localization: ^3.0.8
+  intl: ^0.19.0
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
