--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,38 +30,39 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations: # 👈 paquete del SDK, no de pub.dev
+  flutter_localizations:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.1
   gap: ^3.0.1
   easy_localization: ^3.0.8
-  freezed: ^3.2.3
-  get_it: ^8.2.0
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  get_it: ^8.2.0
   flutter_bloc: ^9.1.1
   bloc: ^9.0.0
   l: ^5.0.1
   injectable: ^2.5.1
-  injectable_generator: ^2.8.1
   url_strategy: ^0.3.0
   dio: ^5.9.0
   dio_intercept_to_curl: ^0.2.0
   shared_preferences: ^2.5.3
+  go_router: ^16.2.1
 
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
 dev_dependencies:
   build_runner: ^2.4.10
+  freezed: ^3.2.3
+  json_serializable: ^6.11.1
+  injectable_generator: ^2.8.1
   flutter_gen_runner: ^5.11.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  custom_lint: ^0.7.4   # 👈 baja a una versión con analyzer ^7
-  json_serializable: ^6.11.1
+  custom_lint: ^0.7.4
+
 
 flutter_gen:
   output: lib/gen/ # Optional (default: lib/gen/)
