Add CHeckpoint login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - assets/images/logo/minds2_white_logo.png
     - assets/images/logo/minds2_without_slogan.png
     - assets/images/auth/robot_test.webp
+    - assets/images/auth/laptop_test.png
     - assets/translations/
 
 
