--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,8 @@ dependencies:
   dio_intercept_to_curl: ^0.2.0
   shared_preferences: ^2.5.3
   go_router: ^16.2.1
-  auto_route: ^10.1.2
+  reactive_forms: ^18.1.1
+  reactive_phone_form_field: ^5.0.2
 
 
 
